roles/local/apps/_jellyfin/jelklyfin-namespace.yaml
# file: 
# synopsis: 
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
